@startuml
title Class Diagram for AddItemCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class AddCommandParser {
  + parse(input: String)
  - validateRequiredFields(input: String)
  - extractCategory(input: String): String
  - parseByCategory(input: String, category: String)
}

class AddItemCommandParser {
  + handleFruit(input: String)
  + handleSnack(input: String)
  + handleToiletries(input: String)
  + handleVegetables(input: String)
  + handleDrinks(input: String)
  + handleMeat(input: String)
  + handleAccessories(input: String)
}

class CommonFieldParser {
  + parse(input: String, booleanFieldPrefix: String): CommonFieldParser
}

class BooleanFieldParser {
  + parse(input: String, fieldPrefix: String): boolean
}

class AddItemCommand {
  - categoryName: String
  - item: Item
  + execute(inventory: Inventory, ui: UI)
}

class DuplicateIdentityParser {
  + findDuplicateItem(category: Category, candidate: Item): Item
  + buildBatchIdentityKey(category: String, target: Item): String
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
  + addItem(item: Item)
}

class Item {
  - name: String
  - quantity: int
  - binLocation: String
}

class DuplicateItemException

class UI {
  + showItemAdded(...)
  + showError(message: String)
}

note as N1
  The diagram lists the current
  category-specific handler methods.
  All handlers share CommonFieldParser
  plus the shared BooleanFieldParser.
end note

Command <|-- AddItemCommand
AddCommandParser ..> AddItemCommandParser : delegates to
AddItemCommandParser ..> CommonFieldParser : parses common fields
AddItemCommandParser ..> BooleanFieldParser : parses boolean field
AddItemCommandParser ..> AddItemCommand : creates
AddItemCommand --> Inventory : looks up category
AddItemCommand --> Category : adds into
AddItemCommand ..> DuplicateIdentityParser : finds duplicate with
AddItemCommand ..> DuplicateItemException : throws on duplicate
AddItemCommand --> UI : success/error display
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
